# Rust-S2

./: .gitignore  Dockerfile  Dockerfile-arrayfire  docker-compose.yml
s2-rust/: Cargo.toml  build.rs  wrapper.h
s2-rust/src/: main.rs
